fixing line spacing at contact page

--- a/contactStyle.css
+++ b/contactStyle.css
@@ -88,6 +88,7 @@ body {
   color: white;
   pointer-events: none;
   font-size: 1.2rem;
+  line-height: 1.6rem;
 }
 
 .contentDivider {
